2012-01-30  Richard Guenther  <rguenther@suse.de>

PR tree-optimization/51528
	* tree-sra.c (sra_modify_assign): Re-factor in preparation
	for PR51528 fix.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@183720 138bc75d-0d04-0410-961f-82ee72b054a4